Update the sWebMap OSF Widget to work with OSF 3.0

--- a/js/sWebMap/index.html
+++ b/js/sWebMap/index.html
@@ -47,7 +47,8 @@
           mapResultsPerPage: 20,
           searchOnDrag: false,
           searchOnZoomChanged: false,
-          structWSFAddress: "http://localhost/ws/",
+          OSFDrupalProxy: "http://localhost/osf/proxy",
+          OSFBaseWebServicesURL: "http://localhost/ws/",
           sharedMapUrl: "http://localhost/maps/",
           googleUrlShortenerKey: "AIzaSyBA3WmgIfrVL9-h3yxMctz3ALnECrN9Bjc",
           labels: {
