--- a/js/sWebMap/index_multimaps.html
+++ b/js/sWebMap/index_multimaps.html
@@ -49,7 +49,8 @@
           mapResultsPerPage: 20,
           searchOnDrag: false,
           searchOnZoomChanged: false,
-          structWSFAddress: "http://localhost/ws/",
+          OSFDrupalProxy: "http://localhost/osf/proxy",
+          OSFBaseWebServicesURL: "http://localhost/ws/",
           googleUrlShortenerKey: "AIzaSyBA6WmtJfiVL7-f3xxMctz2ELnKCrM9Bjc",
           sharedMapUrl: "http://localhost/swebmap/index.html",
           focusMapsCenterPositions: {
